fixed scroll on mobile

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 
 	font-size: 18pt;
 
-	overflow: hidden;
+	overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
